utiliybutoon mobile rendition icon fix

--- a/waters-aem-frontend/src/styles/utilitybuttons.scss
+++ b/waters-aem-frontend/src/styles/utilitybuttons.scss
@@ -25,6 +25,7 @@
 
         @include mobile {
             float: right;
+            height: auto;
         }
     }
 
